[package]
name = "eggeater"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.1.0"
sexp = "1.1.4"
dynasm = "2.0.0"
dynasmrt = "2.0.0"
unwind_safe = "0.1.0"
once_cell = "1.17.1"

[dev-dependencies]
prettydiff = "0.6.4"
